--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
     "@embeddable.com/sdk-core": "^3.13.5",
     "@embeddable.com/sdk-react": "^3.10.12",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "styled-components": "^6.1.16"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/react": "^19.0.11",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "cross-env": "^7.0.3",
     "typescript": "^5.8.2"
