--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "forceConsistentCasingInFileNames": true,
       "strict": true, 
       "skipLibCheck": true,
-      "jsx": "react-jsx"
+      "jsx": "react-jsx",
+      "moduleResolution": "node",
     },
   }
   
