--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@embeddable.com/sdk-core": "^3.13.5",
     "@embeddable.com/sdk-react": "^3.10.12",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
