--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@embeddable.com/sdk-react": "^3.11.1",
     "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^4.1.0",
     "mergician": "^2.0.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
