Max Legend Items prop passed to Pie Chart so long tail can be merged

--- a/src/models/cubes/customers.cube.yml
+++ b/src/models/cubes/customers.cube.yml
@@ -28,3 +28,8 @@ cubes:
       - name: count
         type: count
         title: '# of customers'
+
+      - name: large_numbers
+        sql: (RANDOM() * 5000)
+        type: number
+        title: 'Large numbers'
