--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
   "devDependencies": {
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@typescript-eslint/parser": "^5.62.0",
     "cross-env": "^7.0.3",
+    "eslint": "^8.57.1",
+    "prettier": "^3.5.3",
+    "prettier-eslint": "^16.4.2",
     "typescript": "^5.8.2"
   }
 }
