--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mergician": "^2.0.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^19.0.12",
