introduction of i18n theme properties

--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "license-report": "license-report --output=csv --csvHeaders --fields name --fields link --fields licenseType --fields installedVersion --fields author > license-report.csv"
   },
   "dependencies": {
-    "@embeddable.com/core": "^2.10.3",
-    "@embeddable.com/react": "^2.10.3",
-    "@embeddable.com/sdk-core": "^3.14.3",
-    "@embeddable.com/sdk-react": "^3.11.3",
+    "@embeddable.com/core": "^2.10.6",
+    "@embeddable.com/react": "^2.10.7",
+    "@embeddable.com/sdk-core": "^4.0.1",
+    "@embeddable.com/sdk-react": "^4.0.1",
     "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.3.2",
     "mergician": "^2.0.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
