--- a/package.json
+++ b/package.json
@@ -9,17 +9,33 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit",
+    "check": "npm run lint && npm run typecheck"
   },
-  "keywords": ["embeddable", "embeddable-components", "embeddable-ui","remarkable-ui", "react" ],
+  "keywords": [
+    "embeddable",
+    "embeddable-components",
+    "embeddable-ui",
+    "remarkable-ui",
+    "react"
+  ],
   "author": "embeddable",
   "dependencies": {
+    "eslint-plugin-react-hooks": "^5.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@eslint/css": "^0.10.0",
+    "@eslint/js": "^9.31.0",
+    "@eslint/markdown": "^7.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "typescript": "^5.8.3"
+    "eslint": "^9.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.37.0"
   }
 }
