--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint ."
   },
   "keywords": [
     "embeddable",
@@ -23,10 +24,16 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
-
   "devDependencies": {
-    "typescript": "^5.8.3"
-  
+    "@eslint/css": "^0.10.0",
+    "@eslint/js": "^9.31.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "eslint": "^9.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.3.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.37.0"
   }
 }
-
