--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
+    "prettier": "3.6.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0"
   }
