--- a/package.json
+++ b/package.json
@@ -7,18 +7,13 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "embeddable:build": "embeddable build",
-    "embeddable:dev": "cross-env NODE_OPTIONS='--max-old-space-size=4096' embeddable dev",
-    "embeddable:login": "embeddable login",
-    "embeddable:package": "embeddable buildPackage",
-    "embeddable:push": "embeddable push",
+    "types:check": "tsc --noEmit --incremental false",
+    "lint:staged": "lint-staged",
     "eslint:check": "eslint .",
     "eslint:fix": "eslint --fix --quiet .",
-    "lint:staged": "lint-staged",
-    "prepare": "husky",
     "prettier:check": "prettier . --check",
     "prettier:write": "prettier . --write",
-    "types:check": "tsc --noEmit --incremental false"
+    "prepare": "husky"
   },
   "keywords": [
     "embeddable",
@@ -41,10 +36,6 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@embeddable.com/core": "^2.10.5",
-    "@embeddable.com/react": "^2.10.6",
-    "@embeddable.com/sdk-core": "^4.0.0",
-    "@embeddable.com/sdk-react": "^4.0.0",
     "@eslint/css": "^0.10.0",
     "@eslint/js": "^9.31.0",
     "@types/react": "^19.1.8",
