--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "chart.js": "^4.5.0",
+    "clsx": "^2.1.1",
     "i18next": "^25.3.2",
     "react-chartjs-2": "^5.3.0"
   },
