--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     /* Language and Environment */
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "target": "es2022",
     "lib": ["es2022", "dom", "dom.iterable"],
     "jsx": "react-jsx",
