--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "i18next": "^25.3.2",
+    "mergician": "^2.0.2",
     "react-chartjs-2": "^5.3.0"
   },
   "devDependencies": {
