--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.1",
-    "html2canvas": "^1.4.1",
+    "dom-to-image-more": "^3.6.3",
     "i18next": "^25.3.2",
     "mergician": "^2.0.2",
     "react-chartjs-2": "^5.3.0",
