--- a/package.json
+++ b/package.json
@@ -49,25 +49,30 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@tabler/icons-react": "^3.34.1",
     "chart.js": "^4.5.0",
+    "chartjs-plugin-annotation": "^3.1.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.1",
+    "dom-to-image-more": "^3.6.3",
     "i18next": "^25.3.2",
-    "react-chartjs-2": "^5.3.0"
+    "mergician": "^2.0.2",
+    "react-chartjs-2": "^5.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@embeddable.com/core": "^2.10.5",
-    "@embeddable.com/react": "^2.10.6",
-    "@embeddable.com/sdk-core": "^4.0.0",
-    "@embeddable.com/sdk-react": "^4.0.0",
+    "@embeddable.com/core": "^2.10.7-next.0",
+    "@embeddable.com/react": "^2.10.9-next.0",
+    "@embeddable.com/sdk-core": "^4.0.2-next.1",
+    "@embeddable.com/sdk-react": "^4.0.2-next.1",
     "@eslint/css": "^0.10.0",
     "@eslint/js": "^9.31.0",
-    "@storybook/addon-docs": "^9.0.17",
-    "@storybook/addon-onboarding": "^9.0.17",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
+    "@storybook/react": "^9.0.18",
     "@storybook/react-webpack5": "^9.0.17",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
