--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "scripts": {
     "build": "tsc",
@@ -50,6 +51,7 @@
     ]
   },
   "dependencies": {
+    "@changesets/cli": "^2.29.6",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@tabler/icons-react": "^3.34.1",
     "chart.js": "^4.5.0",
