--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@embeddable/remarkable-ui",
   "author": "embeddable (https://embeddable.com)",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
   "main": "dist/index.js",
@@ -10,6 +9,9 @@
     "dist",
     "README.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc",
     "build-storybook": "storybook build",
