--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Rebuild SWC
-        run: npm rebuild @swc/core
+      - name: Instal SWC
+        run: npm install -D @swc/cli @swc/core
 
       - name: Create Release PR if needed
         uses: changesets/action@v1
