--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "@eslint/js": "^9.31.0",
     "@storybook/react": "^9.0.18",
     "@storybook/react-webpack5": "^9.0.17",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.4.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "eslint": "^9.31.0",
