--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Linux-specific SWC binaries
+        run: npm install @swc/core-linux-x64-gnu
+
       - name: Create Release PR if needed
         uses: changesets/action@v1
         env:
