--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,12 +15,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
+
+      - name: Install Linux-specific SWC binaries
+        run: npm install @swc/core-linux-x64-gnu
 
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
