--- a/package.json
+++ b/package.json
@@ -98,5 +98,8 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "optionalDependencies": {
+    "@swc/core-linux-x64-gnu": "^1.13.5"
   }
 }
