--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@embeddable/remarkable-ui",
+  "name": "@embeddable.com/remarkable-ui",
   "author": "embeddable (https://embeddable.com)",
   "version": "0.0.1",
   "type": "module",
