--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@embeddable.com/sdk-react": "^4.0.2",
     "@eslint/css": "^0.10.0",
     "@eslint/js": "^9.31.0",
+    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
     "@storybook/react": "^9.0.18",
     "@storybook/react-webpack5": "^9.0.17",
     "@swc/cli": "^0.4.0",
