--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.14",
     "dom-to-image-more": "^3.6.3",
     "i18next": "^25.3.2",
     "mergician": "^2.0.2",
