--- a/package.json
+++ b/package.json
@@ -65,11 +65,11 @@
     "i18next": "^25.3.2",
     "mergician": "^2.0.2",
     "react-chartjs-2": "^5.3.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@embeddable.com/core": "^2.11.1",
+    "@embeddable.com/react": "^2.11.0"
   },
   "devDependencies": {
-    "@embeddable.com/core": "^2.11.1",
-    "@embeddable.com/react": "^2.11.0",
     "@embeddable.com/sdk-core": "^4.1.2",
     "@embeddable.com/sdk-react": "^4.0.6",
     "@eslint/css": "^0.10.0",
