R UI-89: Provide css variables as part of the npm package (#124)
* feat: generate css variables on a separate css file

* chore: import process

* feat: add changeset

* feat: move the variable file one level up

* feat: remove eval usage

* feat: simplify the script

* feat: remove string manipluation entirely

* fix: replace generic variables with component specific ones

* feat: merge the css files together

* chore: move the script

* feat: add changeset

--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "access": "public"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "npm run process:css-variables && tsc",
+    "process:css-variables": "node src/remarkable-ui/styles/process-css-variables.js",
     "build-storybook": "storybook build",
     "circular:check": "madge --circular .",
     "deploy-storybook": "gh-pages -d storybook-static",
     "embeddable:build": "embeddable build",
     "embeddable:dev": "embeddable dev",
     "embeddable:login": "embeddable login",
-    "embeddable:package": "embeddable buildPackage",
+    "embeddable:package": "embeddable buildPackage && npm run process:css-variables",
     "embeddable:push": "embeddable push",
     "embeddable:upgrade": "npx npm-check-updates -u \"/embeddable/\"",
     "eslint:check": "eslint .",
