--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "embeddable:build": "embeddable build",
     "embeddable:dev": "embeddable dev",
     "embeddable:login": "embeddable login",
-    "embeddable:package": "embeddable buildPackage && npm run process:css-variables",
+    "embeddable:package": "embeddable buildPackage",
     "embeddable:push": "embeddable push",
     "embeddable:upgrade": "npx npm-check-updates -u \"/embeddable/\"",
     "eslint:check": "eslint .",
@@ -94,13 +94,15 @@
     "lint-staged": "^16.1.2",
     "madge": "^8.0.0",
     "prettier": "^3.6.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "storybook": "^9.0.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0"
   },
   "peerDependencies": {
-    "react": "18.2.0 || ^19.0.0",
-    "react-dom": "18.2.0 || ^19.0.0"
+    "react": ">=19.1.1",
+    "react-dom": ">=19.1.1"
   },
   "optionalDependencies": {
     "@swc/core-linux-x64-gnu": "^1.13.5"
