--- a/package.json
+++ b/package.json
@@ -55,20 +55,21 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.29.6",
+    "@embeddable.com/core": "^2.11.1",
+    "@embeddable.com/react": "^2.11.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@tabler/icons-react": "^3.34.1",
     "chart.js": "^4.5.0",
     "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "chroma-js": "^3.1.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.14",
     "dom-to-image-more": "^3.6.3",
     "i18next": "^25.3.2",
     "mergician": "^2.0.2",
     "react-chartjs-2": "^5.3.0",
-    "xlsx": "^0.18.5",
-    "@embeddable.com/core": "^2.11.1",
-    "@embeddable.com/react": "^2.11.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@embeddable.com/sdk-core": "^4.1.2",
@@ -80,6 +81,7 @@
     "@storybook/react-webpack5": "^9.0.17",
     "@swc/cli": "^0.4.0",
     "@swc/core": "^1.4.0",
+    "@types/chroma-js": "^3.1.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "eslint": "^9.31.0",
