--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.29.6",
-    "@embeddable.com/core": "^2.11.1",
-    "@embeddable.com/react": "^2.11.0",
+    "@embeddable.com/core": "2.13.0",
+    "@embeddable.com/react": "2.12.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@tabler/icons-react": "^3.34.1",
     "chart.js": "^4.5.0",
@@ -72,8 +72,8 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@embeddable.com/sdk-core": "^4.1.2",
-    "@embeddable.com/sdk-react": "^4.0.6",
+    "@embeddable.com/sdk-core": "4.1.3",
+    "@embeddable.com/sdk-react": "4.0.7",
     "@eslint/css": "^0.10.0",
     "@eslint/js": "^9.31.0",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
