--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@embeddable.com/remarkable-ui",
   "version": "2.0.7",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/embeddable-hq/remarkable-ui"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
