--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.8",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/embeddable-hq/remarkable-ui.git"
+    "url": "https://github.com/embeddable-hq/remarkable-ui"
   },
   "type": "module",
   "main": "./dist/index.js",
