--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.19",
     "mergician": "^2.0.2",
-    "react-chartjs-2": "^5.3.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^9.12.0"
   },
   "devDependencies": {
     "@eslint/css": "^0.13.0",
