--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "dayjs": "^1.11.19",
     "mergician": "^2.0.2",
     "react-chartjs-2": "^5.3.0",
-    "react-day-picker": "^9.12.0"
+    "react-day-picker": "^9.12.0",
+    "react-infinite-scroll-component": "^6.1.1"
   },
   "devDependencies": {
     "@eslint/css": "^0.13.0",
