--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-day-picker": "^9.12.0"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@eslint/css": "^0.13.0",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
     "@storybook/react": "^9.0.18",
