--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "./styles": {
       "import": "./dist/styles.js",
       "types": "./dist/styles.d.ts"
-    }
+    },
+    "./global.css": "./dist/global.css"
   },
   "types": "./dist/index.d.ts",
   "files": [
@@ -77,13 +78,14 @@
     "react-day-picker": "^9.12.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
     "@eslint/css": "^0.13.0",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
     "@storybook/react": "^9.0.18",
     "@storybook/react-webpack5": "^9.0.17",
+    "@types/node": "^20.0.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "esbuild": "^0.27.2",
     "esbuild-register": "^3.6.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
