--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "@changesets/cli": "^2.29.6",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tabler/icons-react": "^3.34.1",
     "auto-text-size": "^0.2.3",
     "chart.js": "^4.5.0",
@@ -75,7 +76,8 @@
     "dayjs": "^1.11.19",
     "mergician": "^2.0.2",
     "react-chartjs-2": "^5.3.0",
-    "react-day-picker": "^9.12.0"
+    "react-day-picker": "^9.12.0",
+    "react-tooltip": "^5.30.0"
   },
   "devDependencies": {
     "@eslint/css": "^0.13.0",
