--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
     "dayjs": "^1.11.19",
     "mergician": "^2.0.2",
     "react-chartjs-2": "^5.3.0",
-    "react-day-picker": "^9.12.0",
-    "react-tooltip": "^5.30.0"
+    "react-day-picker": "^9.12.0"
   },
   "devDependencies": {
     "@eslint/css": "^0.13.0",
