--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "@changesets/cli": "^2.29.6",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tabler/icons-react": "^3.34.1",
     "auto-text-size": "^0.2.3",
     "chart.js": "^4.5.0",
